# yashrk.github.io-hakyll

./: .gitignore  README.md  harmonica-scales.html  index-en.md  index.md  projects-en.md  projects-ru.md  site.hs  sitemap.xml  travels-ru.md  yashrk-github-io-hakyll.cabal
blog/: blog-ru.md
css/: style.css
files/travels/Laplandia-2018/: Laplandia-2018.gpx  Laplandia-2018.qgs
images/: COPYING.txt
posts/: 2023-05-26-Hakyll-ru.md  2024-01-25-Hakyll-ru.md
templates/: blog-ru.html  default-en.html  default-ru.html  footer-en.html  footer-ru.html  header-en.html  header-ru.html  post-ru.html  posts-by-tag.html  sitemap.xml  webmention-comment.html  webmention-like.html
travels/: Laplandia-2018-ru.md
webmentions/comments/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
webmentions/likes/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
